[package]
name = "bmrng"
description = "async MPSC request-response channel for Tokio"
version = "0.2.0"
authors = ["Oguz Bilgener <oguz@bilgener.me>"]
repository = "https://github.com/oguzbilgener/bmrng"
documentation = "https://docs.rs/bmrng"
keywords = ["tokio", "mpsc", "request", "async"]
categories = ["concurrency", "asynchronous"]
edition = "2018"
license = "MIT OR Apache-2.0"

include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
  "benches/**/*.rs"
]

[badges]
codecov = { repository = "oguzbilgener/bmrng", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
tokio = { version = "^0.3", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "0.3", features = ["test-util", "rt", "rt-multi-thread", "macros"] }
tokio-test = "^0.3"
loom = { version = "^0.4.0" }
criterion = { version="^0.3" }

[target.'cfg(loom)'.dependencies]
loom = { version = "^0.4.0", features = ["futures", "checkpoint"] }

[[test]]
name = "tests"

# [[bench]]
# name = "bench_channel"
# harness = false